--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2403,6 +2403,7 @@ header nav[aria-expanded='true'] .nav-tools #search-box .search-input {
     white-space: nowrap;
     display: flex;
     align-items: center;
+    cursor: pointer;
   }
 
   .nav-tools .default-content-wrapper>ul>li:last-child {
