Update anchor navigation styles for improved visual alignment
- Adjusted the left position of the underline effect from 0 to 14px.
- Reduced the width of the underline effect from 100% to 80%.

--- a/blocks/anchor-nav/anchor-nav.css
+++ b/blocks/anchor-nav/anchor-nav.css
@@ -110,9 +110,9 @@
   .anchor-nav-link.button::after {
     content: '';
     position: absolute;
-    left: 0;
+    left: 14px;
     bottom: -9px;
-    width: 100%;
+    width: 80%;
     height: 2.5px;
     background-color: var(--dark-red-color);
     transform: scaleX(0);
